Integracion con drivers app

--- a/LimenawebApp/Views/Emails/email_confirmation_bonification.Html.cshtml
+++ b/LimenawebApp/Views/Emails/email_confirmation_bonification.Html.cshtml
@@ -136,7 +136,7 @@
 
 </html>
 <br />
-Check all information in our web application https://limenainc.net/ <br />
+Check all information in our web application https://app.limenainc.net/ <br />
 
 
 Please do not hesitate to contact us if you have any question at customercare@limenainc.net
