--- a/LimenawebApp/Views/Emails/reset_password.cshtml
+++ b/LimenawebApp/Views/Emails/reset_password.cshtml
@@ -4,14 +4,14 @@ Cc: customercare@limenainc.net
 Subject: Password changed successfully - Distribuidora Limena
 
 Hello @ViewBag.user,
-Your password has been reset successfully.
+Your password has been changed successfully.
 
 Your new access data:
 
 Email: @ViewBag.email
 Password: @ViewBag.password
 
-http://limenainc.net/Home/Login
+https://app.limenainc.net/
 
 
 Please do not hesitate to contact us if you have any question at customercare@limenainc.net
