--- a/LimenawebApp/Views/Home/Reset_password.cshtml
+++ b/LimenawebApp/Views/Home/Reset_password.cshtml
@@ -58,7 +58,7 @@
                             {
                                 <h3 class="mr-auto">@ViewBag.msg</h3>
                                    <div class="form-group">
-                                    <a href="@Url.Action("Login", "Home")" class="btn btn-dark submit-btn">BACK HOME</a>
+                                    <a href="@Url.Action("Login", "Home")" class="btn btn-dark submit-btn">Back</a>
                                 </div>
                             }
                             else {
