--- a/LimenawebApp/Views/Invoices/Planning.cshtml
+++ b/LimenawebApp/Views/Invoices/Planning.cshtml
@@ -139,7 +139,7 @@
                                     </div>
                                 </div>
                                 <p class="card-description">
-                                    <h5 class="card-title">Delivery Route</h5>
+                                    <h5 class="card-title">Delivery Date</h5>
                                 </p>
                                 <div class="row">
 
@@ -316,7 +316,7 @@
                                 </div>
                             </div>
                             <p class="card-description">
-                                <h5 class="card-title">Departure</h5>
+                                <h5 class="card-title">Delivery Date</h5>
                             </p>
                             <div class="row">
 
@@ -324,6 +324,20 @@
                                     <div class="form-group row">
                                         <div class="col-sm-12">
                                             <input type="datetime-local" name="departure2" id="departure2" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p class="card-description">
+                                <h5 class="card-title">Preparation Date</h5>
+                            </p>
+                            <div class="row">
+
+                                <div class="col-md-12">
+                                    <div class="form-group row">
+                                        <div class="col-sm-12">
+                                            <input type="datetime-local" name="preparationdate2" id="preparationdate2" class="form-control">
                                         </div>
                                     </div>
                                 </div>
