--- a/LimenawebApp/Views/Main/Dashboard_OperationsPurchases.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard_OperationsPurchases.cshtml
@@ -46,7 +46,17 @@
                             </div>
                             <!-- /page header -->
                             <!-- Grid Item -->
+                            <div class="card-body">
+                                <div class="row" id="quickAccess_cognos">
+                                    <div class="col-md-3 item">
+                                        <a class="quickaccess" href="http://cognos.limenainc.net/">
+                                            <img border="0" alt="Routes" src="~/Content/appcontent/assets/img/badge/logoIBM-Cognos-Analytics.png" width="100" height="100" class="itemqa">
 
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
                             <!-- /grid item -->
 
 
