--- a/LimenawebApp/Views/Main/Dashboard_sales.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard_sales.cshtml
@@ -36,11 +36,29 @@
                                 </div>
                                 <div class="col-md-3 item">
                                     <a class="quickaccess" href="@Url.Action("Prices_request", "Commercial")">
-                                        <img border="0" alt="Price Request" src="~/Content/appcontent/assets/img/badge/tags.png" width="100" height="100" class="itemqa">
+            <img border="0" alt="Price Request" src="~/Content/appcontent/assets/img/badge/tags.png" width="100" height="100" class="itemqa">
 
-                                        <span class="badge badge-info caption">Price Request</span>
+            <span class="badge badge-info caption">Price Request</span>
+        </a>
+        
+                                </div>
+                                <div class="col-md-3 item">
+            
+                                    <a class="quickaccess" href="@Url.Action("Customer_contactdata", "Commercial")">
+                                        <img border="0" alt="Surveys" src="~/Content/appcontent/assets/img/iconpepperi.png" width="100" height="100" class="itemqa">
+                                        <span class="badge badge-info caption">Customers Contact Data</span>
                                     </a>
                                 </div>
+                            </div>
+                            <br /><br /><br />
+                            <div class="row" id="quickAccess_salesreps2" style="display:none;">
+                                @*<div class="col-md-3 item">
+                                    <a class="quickaccess" href="@Url.Action("Surveys", "Commercial")">
+                                        <img border="0" alt="Surveys" src="~/Content/appcontent/assets/img/completed-task.png" width="100" height="100" class="itemqa">
+                                        <span class="badge badge-info caption">Surveys</span>
+                                    </a>
+                                </div>*@
+
                                 <div class="col-md-3 item">
                                     <a class="quickaccess" href="@Url.Action("Credits_request", "Commercial")">
                                         <img border="0" alt="Credits Request" src="~/Content/appcontent/assets/img/badge/credit-card.png" width="100" height="100" class="itemqa">
@@ -48,25 +66,22 @@
                                         <span class="badge badge-info caption">Credits Request</span>
                                     </a>
                                 </div>
-                            </div>
-                            <br /><br /><br />
-                            <div class="row" id="quickAccess_salesreps2" style="display:none;">
                                 <div class="col-md-3 item">
-                                    <a class="quickaccess" href="@Url.Action("Surveys", "Commercial")">
-                                        <img border="0" alt="Surveys" src="~/Content/appcontent/assets/img/completed-task.png" width="100" height="100" class="itemqa">
-                                        <span class="badge badge-info caption">Surveys</span>
+
+                                </div>
+                                <div class="col-md-3 item">
+
+                                </div>
+                            </div>
+                            <div class="row" id="quickAccess_cognos" style="display:none;">
+                                <div class="col-md-3 item">
+                                    <a class="quickaccess" href="http://cognos.limenainc.net/">
+                                        <img border="0" alt="Routes" src="~/Content/appcontent/assets/img/badge/logoIBM-Cognos-Analytics.png" width="100" height="100" class="itemqa">
+
                                     </a>
                                 </div>
-                                <div class="col-md-3 item">
-
-                                </div>
-                                <div class="col-md-3 item">
-
-                                </div>
-                                <div class="col-md-3 item">
-
-                                </div>
                             </div>
+
 
                         </div>
                     </div>
