--- a/LimenawebApp/Views/Management/New_customers.cshtml
+++ b/LimenawebApp/Views/Management/New_customers.cshtml
@@ -85,7 +85,7 @@
         if (user.status == 0)
         {
                                                 <a href="javascript:void(0)" onclick="approveRequest(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Approve" onClick="this.disabled=true;"><i class="fa fa-upload"></i></a>
-                                                <a href="javascript:void(0)" onclick="requestEdit(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Request Edit" onClick="this.disabled=true;"><i class="fa fa-edit"></i></a>
+                                                @*<a href="javascript:void(0)" onclick="requestEdit(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Request Edit" onClick="this.disabled=true;"><i class="fa fa-edit"></i></a>*@
                                                 <a href="javascript:void(0)" onclick="deleteRequest(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Delete"><i class="fa fa-trash-o"></i></a>
 }
         if (user.status == 1)
