--- a/LimenawebApp/Views/Management/Users.cshtml
+++ b/LimenawebApp/Views/Management/Users.cshtml
@@ -156,6 +156,7 @@
                             <optgroup label="Sales">
                                 <option>Sales Manager</option>
                                 <option>AdminBonif</option>
+                                <option>Contacts</option>
                                 <option>Sales Supervisor</option>
                                 <option>Sales Representative</option>
                                 <option>Bonifications</option>
@@ -247,7 +248,7 @@
                             <optgroup label="Sales">
                                 <option>Sales Manager</option>
                                 <option>AdminBonif</option>
-
+                                <option>Contacts</option>
                                 <option>Sales Supervisor</option>
                                 <option>Sales Representative</option>
                                 <option>Bonifications</option>
