--- a/LimenawebApp/Views/Shared/Footer_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Footer_landingpage.cshtml
@@ -5,7 +5,7 @@
 
 <div class="footerb">
     <div class="social-footer">
-        <a href="index.html" class="footer-logo-link w-inline-block"><img src="~/Content/landingpage/images/LogoLimenaWebIcono.png" height="75" srcset="~/Content/landingpage/images/LogoLimenaWebIcono-p-500x192.png 500w, ~/Content/landingpage/images/LogoLimenaWebIcono-p-800x307.png 800w, ~/Content/landingpage/images/LogoLimenaWebIcono.png 850w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 61vw, 88vw" class="footer-logo"></a>
+        <a href="@Url.Action("Index", "Home")" class="footer-logo-link w-inline-block"><img src="~/Content/landingpage/images/LogoLimenaWebIcono.png" height="75" srcset="~/Content/landingpage/images/LogoLimenaWebIcono-p-500x192.png 500w, ~/Content/landingpage/images/LogoLimenaWebIcono-p-800x307.png 800w, ~/Content/landingpage/images/LogoLimenaWebIcono.png 850w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 61vw, 88vw" class="footer-logo"></a>
         <div class="footer-divider"></div>
         <a href="https://www.facebook.com/DistribuidoraLimena" target="_blank" class="w-inline-block">
             <div class="social-footer-cont">
