--- a/LimenawebApp/Views/Shared/QualityControl_Script.cshtml
+++ b/LimenawebApp/Views/Shared/QualityControl_Script.cshtml
@@ -476,8 +476,9 @@
     }
 
     function saveData_StorageType() {
-        var idpicker = $('#pickerlst').val();
-        var pickername = $("#pickerlst option:selected").text();
+        var idpicker = "AA";//$('#pickerlst').val();
+        var pickername = "ANDRES SOTO";//$("#pickerlst option:selected").text();
+        
         var storage = $('#selectStoragetype').val();
         if (idpicker == "0") {
             $("#savebtns").show()
