--- a/LimenawebApp/Views/Shared/main_Scripts.cshtml
+++ b/LimenawebApp/Views/Shared/main_Scripts.cshtml
@@ -76,6 +76,13 @@
                     $("#quickAccess_salesreps").show();
                     $("#quickAccess_salesreps2").show();
                 }
+
+           
+                    if (elementrol == "Cognos") {
+                        $("#quickAccess_cognos").show();
+                    }
+          
+
                 if (elementrol == "Sales Supervisor") {
                     document.getElementById("routes_submenu").style.display = "block";
                     document.getElementById("drop1").style.display = "block";
