--- a/LimenawebApp/Views/Commercial/Credits_request.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_request.cshtml
@@ -190,7 +190,7 @@
             </div>
             <div class="modal-footer">
 
-                <button type="button" class="btn btn-primary" onclick="addproduct()">Add</button>
+                <button type="button" class="btn btn-primary" id="btnagregarcreditosub" onclick="addproduct()">Add</button>
             </div>
         </div>
     </div>
