--- a/LimenawebApp/Views/Emails/email_notificationEnrollSup.cshtml
+++ b/LimenawebApp/Views/Emails/email_notificationEnrollSup.cshtml
@@ -1,15 +1,16 @@
 ﻿To: @ViewBag.To
 From: @ViewBag.From
+Cc: a.quijano@limenainc.net, s.valenzuela@limenainc.net, f.velasquez@limenainc.net
 Subject: New Customer Request - Distribuidora Limena
 
 Hello,
 You have a new customer request in our Limena Web platform from:
 
-@ViewBag.user 
+@ViewBag.user
 @ViewBag.company
 
 
-http://limenainc.net/Home/Login
+https://app.limenainc.net/
 
 
 Please do not hesitate to contact us if you have any question at customercare@limenainc.net
