--- a/LimenawebApp/Views/Home/Enroll.cshtml
+++ b/LimenawebApp/Views/Home/Enroll.cshtml
@@ -9,7 +9,34 @@
     </div>
 </div>
 <div class="bootstrap-wrapper">
+
+
+
     <div class="container">
+
+        @if (ViewBag.showmessage == 1)
+    {
+        <div class="w-form-done" style="display:inline-block !important">
+            <div>Thank you! Your submission has been received!</div>
+        </div>
+}
+else if (ViewBag.showmessage == 3)
+{
+    <div class="w-form-fail" style="display:inline-block !important">
+        <div>Please complete the reCAPTCHA.</div>
+    </div>
+}
+else if (ViewBag.showmessage == 4)
+{
+    <div class="w-form-fail" style="display:inline-block !important">
+        <div>The reCAPTCHA is incorrect.</div>
+    </div>
+}
+else if (ViewBag.showmessage == 0)
+{
+
+}
+
         <form id="myform">
             <div class="row">
 
@@ -19,10 +46,10 @@
                     <select class="select-box" style="margin-bottom:10px !important" name="idrep" id="idrep">
                         <option value="0">Select a sales representative</option>
                         @foreach (var user in ViewBag.lstreps)
-        {
-                <option value="@user.ID_User">@user.Name @user.Lastname</option>
+                    {
+                        <option value="@user.ID_User">@user.Name @user.Lastname</option>
 
-}
+                }
                     </select>
                     <h3>General</h3>
                     <input type="text" class="w-input" maxlength="256" name="CardName" placeholder="Empresa (*)" id="CardName" required="">
@@ -51,11 +78,11 @@
 
 
                     @*<select name="stateId" style="margin-bottom:10px !important" class="select-box states order-alpha" id="stateId" required>
-            <option value="">Seleccione Estado</option>
-        </select>
-        <select name="cityId" style="margin-bottom:10px !important" class="select-box cities order-alpha" id="cityId" required>
-            <option value="">Seleccione Ciudad</option>
-        </select>*@
+                        <option value="">Seleccione Estado</option>
+                    </select>
+                    <select name="cityId" style="margin-bottom:10px !important" class="select-box cities order-alpha" id="cityId" required>
+                        <option value="">Seleccione Ciudad</option>
+                    </select>*@
 
                     <input type="text" class="w-input" maxlength="256" name="Street" placeholder="Calle (*)" id="Street" required="">
 
@@ -66,7 +93,7 @@
                 <div class="col-md-5">
 
                     <h3>Otros</h3>
-                    <div >
+                    <div>
                         <label>Horario de Operacion</label>
                         <input type="text" class="w-input" name="HorarioOperacion" id="HorarioOperacion" required="">
                     </div>
@@ -90,16 +117,16 @@
                     <select class="select-box" style="margin-bottom:10px !important" name="TamanoTienda" id="TamanoTienda" required>
                         <option value="">Tamano de la tienda (*)</option>
                         @foreach (var item in ViewBag.tamanostienda)
-        {
-                <option value="@item.Descr">@item.Descr</option>
+                    {
+                        <option value="@item.Descr">@item.Descr</option>
 
-}
+                }
 
                         @*<option value="-3.000ft">- 3.000 ft</option>
-            <option value="+3.000ft">+ 3.000 ft</option>
-            <option value="+5.000ft">+ 5.000 ft</option>
-            <option value="+10.000ft">+ 10.000 ft</option>
-            <option value="+20.000ft">+ 20.000 ft</option>*@
+                        <option value="+3.000ft">+ 3.000 ft</option>
+                        <option value="+5.000ft">+ 5.000 ft</option>
+                        <option value="+10.000ft">+ 10.000 ft</option>
+                        <option value="+20.000ft">+ 20.000 ft</option>*@
 
                     </select>
 
@@ -236,7 +263,7 @@
                         </div>
 
                         <br /><br />
-                        @Html.Recaptcha(theme: Recaptcha.Web.RecaptchaTheme.Clean)
+                        @*Html.Recaptcha(theme: Recaptcha.Web.RecaptchaTheme.Clean)*@
 
                         <input type="submit" id="btnEnviar" value="Enviar" data-wait="Por favor espere..." class="formbutton w-button">
 
@@ -248,29 +275,8 @@
 
                 </div>
             </div>
-            </form>
-            @if (ViewBag.showmessage == 1)
-        {
-            <div class="w-form-done" style="display:inline-block !important">
-                <div>Thank you! Your submission has been received!</div>
-            </div>
-    }
-    else if (ViewBag.showmessage == 3)
-    {
-        <div class="w-form-fail" style="display:inline-block !important">
-            <div>Please complete the reCAPTCHA.</div>
-        </div>
-}
-else if (ViewBag.showmessage == 4)
-{
-    <div class="w-form-fail" style="display:inline-block !important">
-        <div>The reCAPTCHA is incorrect.</div>
-    </div>
-}
-else if (ViewBag.showmessage == 0)
-{
+        </form>
 
-}
     </div>
     </div>
 
