--- a/LimenawebApp/Views/Home/Login.cshtml
+++ b/LimenawebApp/Views/Home/Login.cshtml
@@ -102,7 +102,7 @@
                                     <p class="footer-text">Copyright © 2018 Distribuidora Limena. All rights reserved.</p>
                                     <ul class="auth-footer text-gray">
 
-                                        <li><a href="@Url.Action("Index","Home",null)">Go Home</a></li>
+                                        <li><a href="https://www.limenainc.net/">Go Home</a></li>
 
 
                                     </ul>
