--- a/LimenawebApp/Views/Shared/Menu_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Menu_landingpage.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-    <a href="index.html" class="brand-2 w-nav-brand"><img src="~/Content/landingpage/images/LogoLimenaWebIcono.png" srcset="/Content/landingpage/images/LogoLimenaWebIcono-p-500x192.png 500w, /Content/landingpage/images/LogoLimenaWebIcono-p-800x307.png 800w, /Content/landingpage/images/LogoLimenaWebIcono.png 850w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 47vw, (max-width: 991px) 45vw, 75vw" class="nav-logo"></a>
+    <a href="@Url.Action("Index", "Home")" class="brand-2 w-nav-brand"><img src="~/Content/landingpage/images/LogoLimenaWebIcono.png" srcset="/Content/landingpage/images/LogoLimenaWebIcono-p-500x192.png 500w, /Content/landingpage/images/LogoLimenaWebIcono-p-800x307.png 800w, /Content/landingpage/images/LogoLimenaWebIcono.png 850w" sizes="(max-width: 479px) 77vw, (max-width: 767px) 47vw, (max-width: 991px) 45vw, 75vw" class="nav-logo"></a>
     <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="@Url.Action("Index", "Home")" class="nav-link w-nav-link">Inicio</a><a href="@Url.Action("Services", "Home")" class="nav-link w-nav-link">Servicios</a><a href="@Url.Action("Brands", "Home")" class="nav-link w-nav-link">Marcas</a>
         <a href="@Url.Action("AboutUs", "Home")" class="nav-link w-nav-link">Nosotros</a><a href="@Url.Action("UnderConstruction", "Home")" class="nav-link w-nav-link">Oportunidades</a><a href="@Url.Action("Login", "Home")" class="nav-link w-nav-link">Ingreso clientes</a><a href="@Url.Action("ContactUs", "Home")" class="nav-link w-nav-link">Contacto</a><a href="@Url.Action("Enroll", "Home")" class="nav-link-cta w-nav-link">Enroll Now</a>
