--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -246,6 +246,7 @@ else
                 if (elementrol == "Sales Manager") {
                     document.getElementById("ss2_submenu").style.display = "block";
                     document.getElementById("ss3_submenu").style.display = "block";
+                  
                 }
                 if (elementrol == "Sales Representative") {
                     document.getElementById("ss1_submenu").style.display = "block";
@@ -253,12 +254,20 @@ else
                     document.getElementById("ss4_submenu").style.display = "block";
                     document.getElementById("ss5_submenu").style.display = "block";
                     document.getElementById("routes_submenu").style.display = "block";
-                    document.getElementById("tasks_submenu").style.display = "block";
+                    //document.getElementById("tasks_submenu").style.display = "block";
+                    document.getElementById("tasks_submenu2").style.display = "block";
                     document.getElementById("drop1").style.display = "block";
 
                     $("#quickAccess_salesreps").show();
                     $("#quickAccess_salesreps2").show();
                 }
+      
+                    if (elementrol == "Cognos") {
+                        $("#quickAccess_cognos").show();
+                    }
+          
+     
+
                 if (elementrol == "Sales Supervisor") {
                     document.getElementById("routes_submenu").style.display = "block";
                     document.getElementById("drop1").style.display = "block";
@@ -267,6 +276,7 @@ else
                     document.getElementById("ss4_submenu").style.display = "block";
                     document.getElementById("ss5_submenu").style.display = "block";
                     document.getElementById("tasks_submenu").style.display = "block";
+                    document.getElementById("tasks_submenu2").style.display = "block";
                     document.getElementById("manag_menu").style.display = "block";
                     document.getElementById("newcustomers_submenu").style.display = "block";
                 }
@@ -294,6 +304,10 @@ else
                 }
                 if (elementrol == "Purchases") {
                     document.getElementById("operpur_submenu").style.display = "block";
+                }
+                if (elementrol == "Contacts") {
+                    document.getElementById("tasks_submenu2").style.display = "block";
+                    document.getElementById("marketing_menu").style.display = "block";
                 }
             });
         }
@@ -335,6 +349,7 @@ else
             document.getElementById("drop1").style.display = "block";
             document.getElementById("reportop1_submenu").style.display = "block";
             document.getElementById("tasks_submenu").style.display = "block";
+            document.getElementById("tasks_submenu2").style.display = "block";
             //document.getElementById("home_menuInventory").style.display = "block";
             document.getElementById("marketing_menu").style.display = "block";
         }
